--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
 
     // 원형 이미지 커스텀 뷰 라이브러리
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
